# ko_bigbird

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker_down.sh  docker_serve_model_test.sh  docker_up.sh  docker_up_pretraining_test.sh  pretraining_crontab  pyproject.toml
bigbird/bpe_model/: ko_big_bird.model  ko_big_bird.vocab
bigbird/core/: attention.py  beam_search.py  decoder.py  encoder.py  flags.py  modeling.py  optimization.py  utils.py
bigbird/create_dataset/: create_pretraining_data.py  run_create_tf_data.sh  run_create_tf_test_data.sh  run_pretraining.sh  text_util.py  tokenization.py  training_data.txt
bigbird/data_preprocessing/: data_processing.py  make_sentence_piece_model.py  tokenizer.py
bigbird/pretrain/: down.sh  old_run_pretraining.py  pretraining_crontab.sh  run_pretraining.py  run_pretraining.sh  run_pretraining_create_serve_model.sh  run_pretraining_test.sh  run_serve_test.py
bigbird/summarization/: eval.ipynb  pubmed.ipynb  run_summarization.py  simulation.py
data_preprocessing/: data_load.py  data_processing.py  make_sentence_piece_model.py  tokenizer.py
data_preprocessing/preprocessing_summary/: extract_summary_data.py
