[tool.poetry]
name = "bigbird"
version = "0.1.0"
description = ""
authors = ["koliaok <jikuaij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^0.11.0"
natsort = "^7.1.0"
numpy = "^1.19.4"
rouge-score = "^0.0.4"
sentencepiece = "^0.1.94"
tensorflow-text = "^2.4.2"
tfds-nightly = "^4.1.0-alpha.202101040106"
pydevd = "^2.2.0"
tensorflow = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
